# atem-shim

./: .gitmodules  CMakeLists.txt  README.md
src/: atem.cpp  atem.service  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp
systemd/: atem-shim@.service
